Changes in index.html

--- a/Info Grepper/templates/authentication/index.html
+++ b/Info Grepper/templates/authentication/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Authentication</title>
+    <title>Introduction</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="">
@@ -79,21 +79,11 @@
         <div class="w3-row-padding w3-padding-64 w3-container">
             <div class="w3-content">
                 <div class="w3-twothird">
-                    <h1>Lorem Ipsum</h1>
-                    <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+                    <h1>InfoGrepper</h1>
+                    <h5 class="w3-padding-32">InfoGrepper is a web application that allows users to search for information. It is a one stop solution for all your reconnaisaaance needs. 
+                    </h5>
 
-                    <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut
-                        enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p class="w3-text-grey">Infogrepper is a reconnaissance tool that allows for efficient information gathering during penetration testing. It allows for the automation of tasks such as searching for specific information on websites, social media platforms, and other online resources. This tool can help security professionals quickly identify sensitive information, such as email addresses, phone numbers, and other personal data, which can then be used to further compromise a system. Additionally, Infogrepper can also be used to identify potential vulnerabilities in a target system, making it a valuable tool for any security professional. Overall, Infogrepper is a powerful tool that can greatly aid in the reconnaissance phase of a penetration test, helping security professionals to quickly and efficiently gather information about a target system.</p>
                 </div>
 
                 <div class="w3-third w3-center">
@@ -110,27 +100,16 @@
                 </div>
 
                 <div class="w3-twothird">
-                    <h1>Lorem Ipsum</h1>
-                    <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+                    <h1>InfoGrepper</h1>
+                    <h5 class="w3-padding-32">Infogrepper: Streamline your reconnaissance, penetrate with precision</h5>
 
-                    <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut
-                        enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p class="w3-text-grey">With Infogrepper, gather all the information you need for a successful penetration test with ease. This powerful reconnaissance tool automates the process of searching for specific information on websites, social media platforms, and other online resources. Security professionals can quickly identify sensitive information such as email addresses and phone numbers, and identify potential vulnerabilities in a target system. Infogrepper streamlines the reconnaissance phase, allowing security professionals to focus on the task at hand- penetrating the system.</p>
                 </div>
             </div>
         </div>
 
         <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-            <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1>
+            <h1 class="w3-margin w3-xlarge">Infogrepper - Your one-stop solution for efficient and comprehensive reconnaissance in penetration testing.</h1>
         </div>
 
         <!-- Footer -->
@@ -143,7 +122,7 @@
                 <i class="fa fa-twitter w3-hover-opacity"></i>
                 <i class="fa fa-linkedin w3-hover-opacity"></i>
             </div>
-            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+            <p>Created by<a href="www.ganpatuniversity.ac.in" target="_blank"> Parth Krish and Faizal</a></p>
         </footer>
 
         <script>
