attached database with sign up action

--- a/Info Grepper/templates/authentication/index.html
+++ b/Info Grepper/templates/authentication/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Introduction</title>
+    <title>Info Grepper</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="">
@@ -122,7 +122,7 @@
                 <i class="fa fa-twitter w3-hover-opacity"></i>
                 <i class="fa fa-linkedin w3-hover-opacity"></i>
             </div>
-            <p>Created by<a href="www.ganpatuniversity.ac.in" target="_blank"> Parth Krish and Faizal</a></p>
+            <p>Created by<a href="https://www.ganpatuniversity.ac.in/" target="_blank"> Parth Krish and Faizal</a></p>
         </footer>
 
         <script>
