--- a/Info Grepper/templates/authentication/signup.html
+++ b/Info Grepper/templates/authentication/signup.html
@@ -22,7 +22,7 @@
             justify-content: center;
             font-family: Roboto, Arial, sans-serif;
             font-size: 15px;
-            
+
         }
 
         form {
@@ -87,12 +87,13 @@
                 display: block;
                 float: none;
             }
-        }   
+        }
     </style>
 </head>
 
 <body>
-    <form action="/action_page.php">
+    <form action="/signup" method="post">
+        {%csrf_token%}
         <div style="height: 80%;">
             <h1>SIGN UP</h1>
             <div class="icon">
@@ -106,14 +107,10 @@
                     <input type="text" placeholder="Enter E-mail" name="mail" required>
                     <label for="psw"><strong>Password</strong></label>
                     <input type="password" placeholder="Enter Password" name="psw" required>
+                    <label for="psw"><strong>Confirm Password</strong></label>
+                    <input type="password" placeholder="Rewrite password" name="psw1" required>
                 </div>
                 <button type="submit"><strong>SIGN UP</strong></button>
-                <div class="container" style="background-color: #eee">
-                    <label style="padding-left: 15px">
-                        <input type="checkbox" checked="checked" name="remember"> Remember me
-                    </label>
-                    <span class="psw"><a href="#">Forgot password?</a></span>
-                </div>
             </div>
     </form>
 
