fixed log in,sign up,sign out actions

--- a/Info Grepper/templates/authentication/signin.html
+++ b/Info Grepper/templates/authentication/signin.html
@@ -82,7 +82,8 @@
 </head>
 
 <body>
-    <form action="/action_page.php">
+    <form action="/signin" method="post">
+        {%csrf_token%}
         <h1>Login Form</h1>
         <div class="formcontainer">
             <hr />
