assets folder added with landing page
Co-authored-by: krishpatel2383 <krishpatel2383@gmail.com>
Co-authored-by: Parth Sharma <parthsharma20@gnu.ac.in>

--- a/Info Grepper/templates/authentication/index2.html
+++ b/Info Grepper/templates/authentication/index2.html
@@ -62,7 +62,7 @@
         <div class="grid-cols-2">
           <div class="grid-item-1">
             <h1 class="main-heading">
-              Welcome to <span>InfoGrepper.</span>
+              Welcome To <span>InfoGrepper.</span>
               <br />
               Discover Insights.
             </h1>
