--- a/Info Grepper/templates/authentication/index2.html
+++ b/Info Grepper/templates/authentication/index2.html
@@ -7,7 +7,7 @@
     <title>Responsive Landing Page using HTML, CSS & Javascript</title>
 
     <!-- ==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="./assets/style/landing .css" />
+    <link rel="stylesheet" href="/static/style/landing .css" />
 
     <!-- ====  REMIXICON CDN ==== -->
     <link
@@ -81,7 +81,7 @@
           </div>
           <div class="grid-item-2">
             <div class="team_img_wrapper">
-              <img src="./assets/img/team.svg" alt="team-img" />
+              <img src="/static/img/team.svg" alt="team-img" />
             </div>
           </div>
         </div>
@@ -194,8 +194,8 @@
     <!-- ==== GSAP CDN ==== -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script> -->
     <!-- ==== SCRIPT.JS ==== -->
-    <script src="./assets/script/landing.js" defer></script>
-    <script src="./assets/script/popup.js" defer></script>
+    <script src="/static/script/landing.js" defer></script>
+    <script src="/static/script/popup.js" defer></script>
     <!-- <script src="./assets/script/loader.js" defer></script> -->
   </body>
 </html>
