--- a/Info Grepper/templates/authentication/index2.html
+++ b/Info Grepper/templates/authentication/index2.html
@@ -1,201 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Landing Page using HTML, CSS & Javascript</title>
 
-    <!-- ==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="./assets/style/landing .css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Responsive Landing Page using HTML, CSS & Javascript</title>
 
-    <!-- ====  REMIXICON CDN ==== -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
+  <!-- ==== STYLE.CSS ==== -->
+  <link rel="stylesheet" href="./assets/style/landing.css" />
+  <link rel="stylesheet" href="./assets/style/tools.css" />
 
-    <!-- ==== ANIMATE ON SCROLL CSS CDN  ==== -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  </head>
-  <body>
-    <!-- ==== HEADER ==== -->
-    <header class="container header">
-      <!-- ==== NAVBAR ==== -->
-      <nav class="nav">
-        <div class="logo">
-          <h2>InfoGrepper.</h2>
-        </div>
+  <!-- ====  REMIXICON CDN ==== -->
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
 
-        <div class="nav_menu" id="nav_menu">
-          <button class="close_btn" id="close_btn">
-            <i class="ri-close-fill"></i>
-          </button>
+  <!-- ==== ANIMATE ON SCROLL CSS CDN  ==== -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+</head>
 
-          <ul class="nav_menu_list">
-            <li class="nav_menu_item">
-              <a href="#" class="nav_menu_link">home</a>
-            </li>
-            <li class="nav_menu_item">
-              <a href="#" class="nav_menu_link">tools</a>
-            </li>
-            <li class="nav_menu_item">
-              <a href="#" class="nav_menu_link">about</a>
-            </li>
-            <li class="nav_menu_item">
-              <a href="#" class="nav_menu_link">
-                <button class="btn login_btn">
-                  login<i class="ri-login-box-line"></i></button
-              ></a>
-            </li>
-          </ul>
-        </div>
+<body>
+  <!-- ==== HEADER ==== -->
+  <header class="container header"> 
+    <!-- ==== NAVBAR ==== -->
+    <nav class="nav">
+      <div class="logo">
+        <h2>InfoGrepper.</h2>
+      </div>
 
-        <button class="toggle_btn" id="toggle_btn">
-          <i class="ri-menu-line"></i>
+      <div class="nav_menu" id="nav_menu">
+        <button class="close_btn" id="close_btn">
+          <i class="ri-close-fill"></i>
         </button>
-      </nav>
-    </header>
 
-    <section class="wrapper">
-      <div class="container">
-        <div class="grid-cols-2">
-          <div class="grid-item-1">
-            <h1 class="main-heading">
-              Welcome To <span>InfoGrepper.</span>
-              <br />
-              Discover Insights.
-            </h1>
-            <p class="info-text">
-              Uncover valuable insights with InfoGrepper's ethical hacking
-              research platform.
-            </p>
+        <ul class="nav_menu_list">
+          <li class="nav_menu_item">
+            <a href="#" class="nav_menu_link">home</a>
+          </li>
+          <li class="nav_menu_item">
+            <a href="./assets/pages/tools.html" class="nav_menu_link">tools</a>
+          </li>
+          <li class="nav_menu_item">
+            <a href="#" class="nav_menu_link">about</a>
+          </li>
+          <li class="nav_menu_item">
+            <a href="#" class="nav_menu_link">
+              <button class="btn login_btn">
+                login<i class="ri-login-box-line"></i></button></a>
+          </li>
+        </ul>
+      </div>
 
-            <div class="btn_wrapper">
-              <button class="btn view_more_btn">
-                view all tools <i class="ri-arrow-right-line"></i>
-              </button>
+      <button class="toggle_btn" id="toggle_btn">
+        <i class="ri-menu-line"></i>
+      </button>
+    </nav>
+  </header>
 
-              <button class="btn documentation_btn">documentation</button>
-            </div>
-          </div>
-          <div class="grid-item-2">
-            <div class="team_img_wrapper">
-              <img src="./assets/img/team.svg" alt="team-img" />
-            </div>
+  <section class="wrapper">
+    <div class="container">
+      <div class="grid-cols-2">
+        <div class="grid-item-1">
+          <h1 class="main-heading">
+            Welcome to <span>InfoGrepper.</span>
+            <br />
+            Discover Insights.
+          </h1>
+          <p class="info-text">
+            Uncover valuable insights with InfoGrepper's ethical hacking
+            research platform.
+          </p>
+
+          <div class="btn_wrapper">
+            <button class="btn view_more_btn" onclick="window.location.href = 'assets/pages/tools.html';">
+              view all tools <i class="ri-arrow-right-line"></i>
+            </button>
+
+            <button class="btn documentation_btn">documentation</button>
           </div>
         </div>
-      </div>
-    </section>
-
-    <section class="wrapper">
-      <div class="container" data-aos="fade-up" data-aos-duration="1000">
-        <div class="grid-cols-3">
-          <div class="grid-col-item">
-            <div class="icon">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
-                />
-              </svg>
-            </div>
-            <div class="featured_info">
-              <span>Built for developers </span>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-                ratione facilis animi voluptas exercitationem molestiae.
-              </p>
-            </div>
-          </div>
-          <div class="grid-col-item">
-            <div class="icon">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M17 14v6m-3-3h6M6 10h2a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2zm10 0h2a2 2 0 002-2V6a2 2 0 00-2-2h-2a2 2 0 00-2 2v2a2 2 0 002 2zM6 20h2a2 2 0 002-2v-2a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2z"
-                />
-              </svg>
-            </div>
-            <div class="featured_info">
-              <span>Access Cutting-Edge Tools</span>
-              <p>
-                Gain access to the latest ethical hacking and pen-testing tools
-                with InfoGrepper's platform.
-              </p>
-            </div>
-          </div>
-
-          <div class="grid-col-item">
-            <div class="icon">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
-                />
-              </svg>
-            </div>
-            <div class="featured_info">
-              <span>Documentation For Tools</span>
-              <p>
-                Access comprehensive documentation for all of InfoGrepper's
-                tools and features to optimize your research process.
-              </p>
-            </div>
+        <div class="grid-item-2">
+          <div class="team_img_wrapper">
+            <img src="./assets/img/team.svg" alt="team-img" />
           </div>
         </div>
-      </div>
-    </section>
-
-    <!-- <div id="loader-container">
-      <div id="loader-bar"></div>
-      <div id="loader-text">Hacking into the system...</div>
-    </div> -->
-
-    <div class="popup-container">
-      <div class="popup-box">
-        <h2>Login</h2>
-        <form>
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
-          <label for="password">Password:</label>
-          <input type="password" id="password" name="password" required />
-          <button type="submit">Login</button>
-        </form>
-        <a href="#" class="close-btn">&times;</a>
       </div>
     </div>
+  </section>
 
-    <footer></footer>
+  <section class="wrapper">
+    <div class="container" data-aos="fade-up" data-aos-duration="1000">
+      <div class="grid-cols-3">
+        <div class="grid-col-item">
+          <div class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+            </svg>
+          </div>
+          <div class="featured_info">
+            <span>Streamlined Security Testing</span>
+            <p>
+              Improve the efficiency and accuracy of your security testing with InfoGrepper's platform, providing you
+              with the latest ethical hacking and pen-testing tools to identify and remediate potential vulnerabilities
+              in your system.
+            </p>
+          </div>
+        </div>
+        <div class="grid-col-item">
+          <div class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M17 14v6m-3-3h6M6 10h2a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2zm10 0h2a2 2 0 002-2V6a2 2 0 00-2-2h-2a2 2 0 00-2 2v2a2 2 0 002 2zM6 20h2a2 2 0 002-2v-2a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2z" />
+            </svg>
+          </div>
+          <div class="featured_info">
+            <span>Access Cutting-Edge Tools</span>
+            <p>
+              Gain access to the latest ethical hacking and pen-testing tools
+              with InfoGrepper's platform.
+            </p>
+          </div>
+        </div>
 
-    <!-- ==== ANIMATE ON SCROLL JS CDN -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!-- ==== GSAP CDN ==== -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script> -->
-    <!-- ==== SCRIPT.JS ==== -->
-    <script src="./assets/script/landing.js" defer></script>
-    <script src="./assets/script/popup.js" defer></script>
-    <!-- <script src="./assets/script/loader.js" defer></script> -->
-  </body>
+        <div class="grid-col-item">
+          <div class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
+            </svg>
+          </div>
+          <div class="featured_info">
+            <span>Documentation For Tools</span>
+            <p>
+              Access comprehensive documentation for all of InfoGrepper's
+              tools and features to optimize your research process.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Login-popup -->
+  <div class="popup-container">
+    <div class="popup-box">
+      <h2>Login</h2>
+      <form>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="xyz@gmail.com" required />
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="" required />
+        <button type="submit">Login</button>
+      </form>
+      <a href="#" class="close-btn">&times;</a>
+
+      <p>Not have an account? SignUp</p>
+    </div>
+  </div>
+
+
+
+  <!-- <div class="main-container">
+    <div class="heading">
+      <h1 class="heading_title">Info Grepper Toolkit</h1>
+      <p class="heading_credits">
+        <a class="heading_link">Streamline data gathering with our comprehensive suite of tools.</a>
+      </p>
+    </div>
+    <div class="cards">
+      <div class="card card-1">
+        <div class="card_icon">Tool 1</div>
+        <h2 class="card_title">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </h2>
+        <p class="card_apply">
+          <a class="card_link" href="#">GO</a>
+        </p>
+      </div>
+      <div class="card card-2">
+        <div class="card_icon">Tool 2</div>
+        <h2 class="card_title">
+          Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </h2>
+        <p class="card_apply">
+          <a class="card_link" href="#">GO</a>
+        </p>
+      </div>
+      <div class="card card-3">
+        <div class="card_icon">Tool 3</div>
+        <h2 class="card_title">Ut enim ad minim veniam.</h2>
+        <p class="card_apply">
+          <a class="card_link" href="#">GO</a>
+        </p>
+      </div>
+      <div class="card card-4">
+        <div class="card_icon">Tool 4</i></div>
+        <h2 class="card_title">
+          Quis nostrud exercitation ullamco laboris nisi.
+        </h2>
+        <p class="card_apply">
+          <a class="card_link" href="#">GO</a>
+        </p>
+      </div>
+      <div class="card card-5">
+        <div class="card_icon">Tool 5</div>
+        <h2 class="card_title">
+          Ut aliquip ex ea commodo consequat. Duis aute irure dolor.
+        </h2>
+        <p class="card_apply">
+          <a class="card_link" href="#">GO</a>
+        </p>
+      </div>
+      <div class="card card-2">
+        <div class="card_icon">Tool 6</div>
+        <h2 class="card_title">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </h2>
+        <p class="card_apply">
+          <a class="card_link" href="#">GO</a>
+        </p>
+      </div>
+    </div>
+  </div>
+
+ -->
+
+
+
+  <footer></footer>
+
+  <!-- ==== ANIMATE ON SCROLL JS CDN -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- ==== GSAP CDN ==== -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script> -->
+  <!-- ==== SCRIPT.JS ==== -->
+  <script src="./assets/script/landing.js" defer></script>
+  <script src="./assets/script/popup.js" defer></script>
+  <!-- <script src="./assets/script/loader.js" defer></script> -->
+</body>
+
 </html>
