created tools module& integrated url scrapper tool

--- a/Info Grepper/templates/authentication/index2.html
+++ b/Info Grepper/templates/authentication/index2.html
@@ -1,33 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Landing Page using HTML, CSS & Javascript</title>
-
-    <!-- ==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="/static/style/landing .css" />
-
-    <!-- ====  REMIXICON CDN ==== -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-
-    <!-- ==== ANIMATE ON SCROLL CSS CDN  ==== -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  </head>
-  <body>
-    <!-- ==== HEADER ==== -->
-    <header class="container header">
-      <!-- ==== NAVBAR ==== -->
-      <nav class="nav">
-        <div class="logo">
-          <h2>InfoGrepper.</h2>
-        </div>
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -35,8 +8,8 @@
   <title>Responsive Landing Page using HTML, CSS & Javascript</title>
 
   <!-- ==== STYLE.CSS ==== -->
-  <link rel="stylesheet" href="./assets/style/landing.css" />
-  <link rel="stylesheet" href="./assets/style/tools.css" />
+  <link rel="stylesheet" href="/static/style/landing.css" />
+  <link rel="stylesheet" href="/static/style/tools.css" />
 
   <!-- ====  REMIXICON CDN ==== -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
@@ -64,7 +37,7 @@
             <a href="#" class="nav_menu_link">home</a>
           </li>
           <li class="nav_menu_item">
-            <a href="./assets/pages/tools.html" class="nav_menu_link">tools</a>
+            <a href="/tools" class="nav_menu_link">tools</a>
           </li>
           <li class="nav_menu_item">
             <a href="#" class="nav_menu_link">about</a>
@@ -98,10 +71,11 @@
           </p>
 
           <div class="btn_wrapper">
-            <button class="btn view_more_btn" onclick="window.location.href = 'assets/pages/tools.html';">
+            <a href="/tools">
+            <button class="btn view_more_btn">
               view all tools <i class="ri-arrow-right-line"></i>
             </button>
-
+            </a>
             <button class="btn documentation_btn">documentation</button>
           </div>
 
@@ -112,7 +86,7 @@
         </div>
         <div class="grid-item-2">
           <div class="team_img_wrapper">
-            <img src="./assets/img/team.svg" alt="team-img" />
+            <img src="/static/img/team.svg" alt="team-img" />
 
           </div>
         </div>
@@ -267,8 +241,8 @@
   <!-- ==== GSAP CDN ==== -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script> -->
   <!-- ==== SCRIPT.JS ==== -->
-  <script src="./assets/script/landing.js" defer></script>
-  <script src="./assets/script/popup.js" defer></script>
+  <script src="/static/script/landing.js" defer></script>
+  <script src="/static/script/popup.js" defer></script>
   <!-- <script src="./assets/script/loader.js" defer></script> -->
 </body>
 
