--- a/Info Grepper/templates/tools/tools.html
+++ b/Info Grepper/templates/tools/tools.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style/tools.css">
+    <link rel="stylesheet" href="/static/style/tools.css">
     <title>All Tools</title>
 </head>
 
@@ -24,7 +24,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </h2>
                 <p class="card_apply">
-                    <a class="card_link" href="#">GO</a>
+                    <a class="card_link" href="{% url 'scrapper' %}">GO</a>
                 </p>
             </div>
             <div class="card card-2">
