--- a/django_login_system-master/users/templates/tools/web_scrapper.html
+++ b/django_login_system-master/users/templates/tools/web_scrapper.html
@@ -7,10 +7,9 @@
 <section>
   <div class="tool-wrapper">
     <div class="tool-details">
-      <h1>Web Scrapper</h1>
+      <h1>Web Scraper</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum voluptatum
-        excepturi repudiandae vitae ducimus alias dicta, obcaecati a optio ipsa.
+   This Script focuses on retrieving all the urls embed in webpage.
       </p>
     </div>
     <form class="tool-inputs" method="POST">
