--- a/django_login_system-master/users/templates/users/base.html
+++ b/django_login_system-master/users/templates/users/base.html
@@ -16,7 +16,7 @@
       <!-- ==== NAVBAR ==== -->
       <nav class="nav">
         <div class="logo">
-          <h2>InfoGrepper.</h2>
+          <h2>InfoGrepper</h2>
         </div>
 
         <div class="nav_menu" id="nav_menu">
