--- a/django_login_system-master/users/templates/users/landing_page.html
+++ b/django_login_system-master/users/templates/users/landing_page.html
@@ -21,13 +21,12 @@
     <div class="grid-cols-2">
       <div class="grid-item-1">
         <h1 class="main-heading">
-          Welcome to <span>InfoGrepper.</span>
+          Welcome to <span>InfoGrepper</span>
           <br />
           Discover Insights.
         </h1>
         <p class="info-text">
-          Uncover valuable insights with InfoGrepper's ethical hacking
-          research platform.
+          Uncover valuable insights and information with our InfoGrepper's research platform.
         </p>
 
         <div class="btn_wrapper">
@@ -61,7 +60,7 @@
           <span>Streamlined Security Testing</span>
           <p>
             Improve the efficiency and accuracy of your security testing with InfoGrepper's platform, providing you
-            with the latest ethical hacking and pen-testing tools to identify and remediate potential vulnerabilities
+            with the latest ethical hacking and pen-testing tools to identify and mitigate potential vulnerabilities
             in your system.
           </p>
         </div>
