--- a/django_login_system-master/users/templates/users/url-scrapper.html
+++ b/django_login_system-master/users/templates/users/url-scrapper.html
@@ -11,10 +11,7 @@
     <body>
         <h3>Web Url Scrapper</h3>
         <p>
-            A web URL scraper tool is a software application designed to extract website URLs from web pages.
-            This tool is useful for digital marketers, SEO specialists, and researchers to gather data on the internet for various purposes.
-            The URL scraper typically works by scanning web pages for links, extracting the URLs, and then compiling them into a list.
-            These tools can be useful for building backlink profiles, conducting competitive research, and analyzing website traffic. 
+           This python script focuses on retreving all the webpages links from a giver Url. The link can also be present inside a button or an action. Libraries needed are SSL, urllib and BeautifulSoup. The program access the website and returns all the links present in the website.
         </p>
         
         <form method="POST">
