--- a/django_login_system-master/users/templates/users/landing_page.html
+++ b/django_login_system-master/users/templates/users/landing_page.html
@@ -31,9 +31,9 @@
         </p>
 
         <div class="btn_wrapper">
-          <button class="btn view_more_btn" onclick="window.location.href = 'assets/pages/tools.html';">
+          <a class="btn view_more_btn" href="{% url 'alltools'%}">
             view all tools <i class="ri-arrow-right-line"></i>
-          </button>
+          </a>
 
           <button class="btn documentation_btn">documentation</button>
         </div>
