--- a/django_login_system-master/users/templates/users/login.html
+++ b/django_login_system-master/users/templates/users/login.html
@@ -1,13 +1,25 @@
-{% extends 'users/base.html' %}
+{% load static%}
 
-{% block content %}
-  <br>
-  <div class="alert alert-success" role="alert">
-    <h2 style="text-align: center;">Login</h2>
-  </div>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-  </form>
-{% endblock content%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{% static 'style/signup.css' %}">
+  <title>Login</title>
+</head>
+<body>
+  <section>
+    <div class="heading">
+        <h3 style="text-align: center;">Login</h3>
+    </div>
+    <form method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit">Login</button>
+    </form>
+    <h4>Don't have an Account ? <a href="{% url 'signup' %}">Sign Up</a></h4>
+</section>
+</body>
+</html>
