--- a/django_login_system-master/users/templates/users/tools.html
+++ b/django_login_system-master/users/templates/users/tools.html
@@ -19,21 +19,21 @@
     </div>
     <div class="cards">
         <div class="card card-1">
-            <div class="card_icon">Tool 1</div>
+            <div class="card_icon">WebURL Scraper</div>
             <h2 class="card_title">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                This python script focuses on retreving all the webpages links from a given Url. The program access the website and returns all the links present in the website.
             </h2>
             <p class="card_apply">
                 <a class="card_link" href="{% url 'WebScrapper' %}">GO</a>
             </p>
         </div>
         <div class="card card-2">
-            <div class="card_icon">Tool 2</div>
+            <div class="card_icon">IPGeo</div>
             <h2 class="card_title">
-                Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                This is used to find details of the provided input. Input supports domain-name, IPV4 & IPV6.
             </h2>
             <p class="card_apply">
-                <a class="card_link" href="#">GO</a>
+                <a class="card_link" href="{% url 'IPGeo' %}">GO</a>
             </p>
         </div>
         <div class="card card-3">
