--- a/django_login_system-master/users/templates/tools/ipgeo.html
+++ b/django_login_system-master/users/templates/tools/ipgeo.html
@@ -2,6 +2,7 @@
 {% load static %} 
 {% block style %}
 <link rel="stylesheet" href="{% static 'style/web_scrapper.css' %}" />
+<title>Tool-IpGeo</title>
 {% endblock style %} {% block content %}
 
 <section>
