--- a/django_login_system-master/users/templates/users/home.html
+++ b/django_login_system-master/users/templates/users/home.html
@@ -31,6 +31,7 @@
             border: 3px solid #313030;
         }
     </style>
+    <title>Home</title>
 {% endblock style %}
 
 {% block content %}
