--- a/django_login_system-master/users/templates/users/landing_page.html
+++ b/django_login_system-master/users/templates/users/landing_page.html
@@ -10,7 +10,7 @@
 
   <!-- =====Style link===== -->
   <link rel="stylesheet" href="{% static 'style/landing.css' %}">
-
+  <title>Home</title>
 {% endblock style %}
 
 
