--- a/django_login_system-master/users/templates/users/login.html
+++ b/django_login_system-master/users/templates/users/login.html
@@ -19,7 +19,7 @@
       {{ form.as_p }}
       <button type="submit">Login</button>
     </form>
-    <h4>Don't have an Account ? <a href="{% url 'signup' %}">Sign Up</a></h4>
+    <h4>Don't have an Account ? <a href="{% url 'signup' %}">Sign Up</a> | <a href="{% url 'password_reset' %}">Forgot Password?</a></h4>
 </section>
 </body>
 </html>
