--- a/django_login_system-master/users/templates/users/tools.html
+++ b/django_login_system-master/users/templates/users/tools.html
@@ -5,6 +5,7 @@
 {% block style %}
 
   <link rel="stylesheet" href="{% static 'style/tools.css' %}">
+  <title>All Tools</title>
 
 {% endblock style %}
 
