--- a/django_login_system-master/users/templates/tools/web_scrapper.html
+++ b/django_login_system-master/users/templates/tools/web_scrapper.html
@@ -1,5 +1,6 @@
 {% extends 'users/base.html' %} {% load static %} {% block style %}
 <link rel="stylesheet" href="{% static 'style/web_scrapper.css' %}" />
+<title>Tool-WebScrapper</title>
 {% endblock style %} {% block content %}
 
 <section>
