--- a/django_login_system-master/users/templates/users/base.html
+++ b/django_login_system-master/users/templates/users/base.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'style/base.css' %}" />
     {% block style %} {% endblock style %}
-    <title>base</title>
+    <!-- <title>base</title> -->
   </head>
 
   <body>
     <!-- ==== HEADER ==== -->
-    <header class="container header">
+    <header class="container header" style="position: sticky;top: 0;">
       <!-- ==== NAVBAR ==== -->
       <nav class="nav">
         <div class="logo">
@@ -37,7 +37,7 @@
             <li class="nav_menu_item">
               {% if user.is_authenticated %}
               <a class="nav_menu_link">
-                <div class="profile">
+                <div class="profile" title="Open Dashboard">
                   <div class="user_name"><span>{{ user.username }}</span></div>
                   <div class="profile_img">
                     <img src="{% static 'images/profile1.jpg' %}" />
