tool result download and initial result fix

--- a/django_login_system-master/users/templates/tools/web_scrapper.html
+++ b/django_login_system-master/users/templates/tools/web_scrapper.html
@@ -29,8 +29,8 @@
       {% endif %}
     </form>
 
-    {% if result is None %}
-    <p>run it</p>
+    {% if not result %}
+    <p></p>
     {% else %}
     <div id="tool-output">
       <table id="output-table">
