--- a/django_login_system-master/users/templates/tools/ipgeo.html
+++ b/django_login_system-master/users/templates/tools/ipgeo.html
@@ -34,6 +34,10 @@
               <th>Keys</th>
               <th>Values</th>
             </tr>
+            <tr>
+              <td>File</td>
+              <td><a href="{% url 'ipgeo_download' %}">Download JSON</a></td>
+            </tr>
           </thead>
           {% for key,value in results.items %}
           <tr>
