user profile & password change service

--- a/django_login_system-master/users/templates/dashboard/dashboard.html
+++ b/django_login_system-master/users/templates/dashboard/dashboard.html
@@ -121,7 +121,8 @@
 
      <section class="home">
           <!-- ------------Dashboard------------- -->
-          {% block content %} {% endblock content %}
+          {% block messages %}{% endblock messages %}
+          {% block content %} {% endblock %}
 
 
      </section>
