--- a/django_login_system-master/users/templates/dashboard/profile.html
+++ b/django_login_system-master/users/templates/dashboard/profile.html
@@ -1,9 +1,11 @@
 {% extends 'dashboard/dashboard.html' %}
+{% load static%}
+{% block style %} 
+  <link rel="stylesheet" href="{% static 'style/dash-profile.css' %}">
+{% endblock style %}
 
 {% block content %}
 <div class="container">
-  <h1>User Profile</h1>
-  
   <div class="row">
     <div class="col-sm-6">
       <h2>Update Account Information</h2>
@@ -14,13 +16,14 @@
         </button>
       </form>
     </div>
+  </div>
+  
+  <div class="row">
     <div class="col-sm-6">
       <h2>Change Password</h2>
       <form method="post" action="{% url 'profile'%}">
         {% csrf_token %} 
-        {{ password_form.old_password }} 
-        {{ password_form.new_password1 }} 
-        {{ password_form.new_password2 }} 
+        {{ password_form.as_p }} 
         <button type="submit" name="change_password" class="btn btn-primary">
           Change Password
         </button>
@@ -28,7 +31,6 @@
           <div class="alert alert-success" role="alert">
             {% for message in messages %} 
               {{ message }}
-              
             {% endfor %}
           </div>
         {% endif %}
