--- a/django_login_system-master/users/templates/tools/web_scrapper.html
+++ b/django_login_system-master/users/templates/tools/web_scrapper.html
@@ -23,20 +23,28 @@
         name="url_input"
       />
       {% if user.is_authenticated %}
-        <button type="submit">FIRE</button>
+      <button type="submit">FIRE</button>
       {% else %}
-        <button type="button"><a href="{% url 'login' %}">FIRE</a></button>
+      <button type="button"><a href="{% url 'login' %}">FIRE</a></button>
       {% endif %}
     </form>
 
     {% if not result %}
     <p></p>
     {% else %}
+
     <div id="tool-output">
       <table id="output-table">
         <thead>
           <tr>
             <th>Links</th>
+            <th style="background-color: #ffffff">
+              <div id="output-file">
+                <a href="{% url 'webscrap_download' %}"
+                  ><i class="bx bxs-download"></i
+                ></a>
+              </div>
+            </th>
           </tr>
         </thead>
         {% for item in result %}
