--- a/django_login_system-master/users/templates/users/tools.html
+++ b/django_login_system-master/users/templates/users/tools.html
@@ -19,7 +19,7 @@
         </p>
     </div>
     <div class="cards">
-        <div class="card card-1">
+        <!-- <div class="card card-1">
             {% if user.is_authenticated %}
             <div id="fav-btn">
                 <a href="{% url 'ipgeo_download' %}" ><i class='bx bx-heart'></i></a>  
@@ -32,8 +32,8 @@
             <p class="card_apply">
                 <a class="card_link" href="{% url 'WebScrapper' %}">GO</a>
             </p>
-        </div>
-        <div class="card card-2">
+        </div> -->
+        <!-- <div class="card card-2">
             <div class="card_icon">IPGeo</div>
             <h2 class="card_title">
                 This is used to find details of the provided input. Input supports domain-name, IPV4 & IPV6.
@@ -41,41 +41,16 @@
             <p class="card_apply">
                 <a class="card_link" href="{% url 'IPGeo' %}">GO</a>
             </p>
-        </div>
-        <div class="card card-3">
-            <div class="card_icon">Tool 3</div>
-            <h2 class="card_title">Ut enim ad minim veniam.</h2>
+        </div> -->
+        {% for tool in tools %}
+        <div class="card">
+            <div class="card_icon">{{ tool.name }}</div>
+            <h2 class="card_title">{{ tool.description }}</h2>
             <p class="card_apply">
-                <a class="card_link" href="#">GO</a>
+                <a class="card_link" href="{{ tool.url }}">GO</a>
             </p>
         </div>
-        <div class="card card-4">
-            <div class="card_icon">Tool 4</i></div>
-            <h2 class="card_title">
-                Quis nostrud exercitation ullamco laboris nisi.
-            </h2>
-            <p class="card_apply">
-                <a class="card_link" href="#">GO</a>
-            </p>
-        </div>
-        <div class="card card-5">
-            <div class="card_icon">Tool 5</div>
-            <h2 class="card_title">
-                Ut aliquip ex ea commodo consequat. Duis aute irure dolor.
-            </h2>
-            <p class="card_apply">
-                <a class="card_link" href="#">GO</a>
-            </p>
-        </div>
-        <div class="card card-2">
-            <div class="card_icon">Tool 6</div>
-            <h2 class="card_title">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </h2>
-            <p class="card_apply">
-                <a class="card_link" href="#">GO</a>
-            </p>
-        </div>
+        {% endfor %}
     </div>
 </div>
 
